--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>StreamLens</title>
+<link rel="preload" href="fonts/roboto.woff" as="font" crossorigin="anonymous">
+<link rel="preload" href="fonts/roboto-bold.woff" as="font" crossorigin="anonymous">
 <link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="popup.css">
 <div id="app"></div>
