--- a/background.html
+++ b/background.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>StreamLens</title>
-<script src="vendor/browser-polyfill.min.js"></script>
+<script src="/web_modules/webextension-polyfill.js"></script>
 <script type="module" src="./background/index.js"></script>
