--- a/options.html
+++ b/options.html
@@ -6,5 +6,5 @@
 <link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="options.css">
 <div id="app"></div>
-<script src="vendor/browser-polyfill.min.js"></script>
+<script src="/web_modules/webextension-polyfill.js"></script>
 <script type="module" src="options/index.js"></script>
