--- a/background.html
+++ b/background.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>StreamLens</title>
-<script src="/web_modules/webextension-polyfill.js"></script>
+<script type="importmap">
+{
+	"imports": {
+		"lodash-es": "/node_modules/lodash-es/lodash.js",
+		"preact": "/node_modules/preact/dist/preact.module.js",
+		"preact/hooks": "/node_modules/preact/hooks/dist/hooks.module.js",
+		"prsh": "/node_modules/prsh/prsh.js",
+		"unistore": "/node_modules/unistore/dist/unistore.es.js",
+		"unistore-browser-sync": "/node_modules/unistore-browser-sync/index.js"
+	}
+}
+</script>
+<script src="/node_modules/webextension-polyfill/dist/browser-polyfill.js"></script>
 <script type="module" src="./background/index.js"></script>
