Adopt ESBuild for build
Sadly, it's time to incorporate a build step:

1. JSX is a much nicer development experience than raw JavaScript for constructing Preact elements. HTM comes close, but the inability to incorporate type-checking in a non-starter.
2. The pre-bundling step with Rollup to generate web_modules (previously implemented using Snowpack) is much complexity.
3. ESBuild is very fast
4. Opens up the option of using native TypeScript
5. Chrome adds native support for import-maps in v89 (woo!), but Firefox support is not yet on the horizon
6. Probably faster loading experience to prebundle distributable

--- a/options.html
+++ b/options.html
@@ -6,5 +6,5 @@
 <link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="options.css">
 <div id="app"></div>
-<script src="/web_modules/webextension-polyfill.js"></script>
-<script type="module" src="options/index.js"></script>
+<script src="/node_modules/webextension-polyfill/dist/browser-polyfill.js"></script>
+<script type="module" src="build/options/index.js"></script>
