--- a/background.html
+++ b/background.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>StreamLens</title>
-<script src="/web_modules/webextension-polyfill.js"></script>
-<script type="module" src="./background/index.js"></script>
+<script src="/node_modules/webextension-polyfill/dist/browser-polyfill.js"></script>
+<script type="module" src="./build/background/index.js"></script>
