--- a/popup.html
+++ b/popup.html
@@ -6,5 +6,5 @@
 <link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="popup.css">
 <div id="app"></div>
-<script src="/web_modules/webextension-polyfill.js"></script>
-<script type="module" src="popup/index.js"></script>
+<script src="/node_modules/webextension-polyfill/dist/browser-polyfill.js"></script>
+<script type="module" src="build/popup/index.js"></script>
